FIX: missing overflow

--- a/view/frontend/styles/module/_dots.scss
+++ b/view/frontend/styles/module/_dots.scss
@@ -27,6 +27,7 @@ $notorama-dot-color-active: $color-orange-red1 !default;
         background-color: $notorama-dot-color;
         box-shadow: none;
         text-indent: -100vw;
+        overflow: hidden;
     }
 
     .slick-active button {
