--- a/view/frontend/web/css/source/module/_dots.less
+++ b/view/frontend/web/css/source/module/_dots.less
@@ -27,6 +27,7 @@
         background-color: @notorama-dot-color;
         box-shadow: none;
         text-indent: -100vw;
+        overflow: hidden;
     }
 
     .slick-active button {
